Bug 1196592: Make retargeting Fetch to another thread actually work. r=nsm

--HG--
extra : rebase_source : 24801ef2546f6aa3d74b9193a104bb35e8103699